# beammp-server-beiwagen

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build_release.sh  run.sh
.github/workflows/: pipeline.yml
src/: config.rs  config_test.rs  delta_builder.rs  delta_builder_test.rs  file_manager.rs  hasher.rs  local_resource.rs  main.rs  online_resource.rs  online_resource_test.rs  resource.rs  updater.rs
