[package]
name = "beammp-server-beiwagen"
version = "0.0.0"
edition = "2021"

[dependencies]
zip = "0.6"
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
colour = "2.0"
lazy_static = "1.4"
scraper = "0.25"
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon", "improved_unicode"] }
ureq = "3.0"
self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
argh = "0.1"
toml = "0.9.0"

[dev-dependencies]
assertor = "0.0"
pretty_assertions = "1.4"
rand = "0.9.1"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
